Ajout de pleins de petits trucs

--- a/entreprise.html
+++ b/entreprise.html
@@ -61,11 +61,7 @@
                     </p>
                 </div>
             </div>
-
-            <figure class="hierarchy-figure">
-                <img src="assets/organigramme-placeholder.png" alt="Organigramme de l'entreprise">
-                <figcaption>Schéma : Positionnement hiérarchique au sein du pôle Infrastructure.</figcaption>
-            </figure>
+                <img src="assets/organigramme.png" alt="Organigramme de l'entreprise">
         </section>
 
         <div style="text-align: center; margin-top: 60px;">
