--- a/entreprise.html
+++ b/entreprise.html
@@ -25,7 +25,7 @@
             <div class="card">
                 <h2>L'Agence PRO</h2>
                 <p>Entreprise de télécommunications et les infrastructures numériques pour
-                    professionnels située à Bretteville-sur-Odon. <br> L'entreprise ne possède pas de sous-services. <br>
+                    professionnels située à Bretteville-sur-Odon. <br>
 
                     Les domaines d'expertise de l'entreprise sont : <br>
                     <strong> - Téléphonie d'entreprise :</strong> solutions IP, téléphonie mobile WiFi ou DECT, communications
@@ -57,7 +57,7 @@
                 <div class="card">
                     <h3>Ma valeur ajoutée</h3>
                     <p>Faire le pont entre les besoins abstraits du client ("ça doit marcher") et la réalité technique
-                        ("il faut tel VLAN").
+                        ("il faut tel VLAN"). <br> Accompagnement personnalisé des clients pour répondre à leurs problèmes. 
                     </p>
                 </div>
             </div>
