--- a/projet.html
+++ b/projet.html
@@ -182,7 +182,8 @@
                             </div>
 
                             <h4>Tâche 3 : Tirer la fibre </h4>
-                            <p>Un aussi gros projet se fait toujours accompagné d'autres personnes ! <br> Pour commencer
+                            <p>Un aussi gros projet se fait toujours accompagné d'autres personnes ! <br> Pour
+                                commencer,
                                 nous devions contacter l'entreprise Normandie drainage pour installer les chambres de
                                 tirages afin de tirer la fibre entre la rue et la baie principale du Harras. <br> Puis
                                 l'entreprise "CIRCET" qui est mandaté par la fibre COVAGE pour l’installation, a tiré la
@@ -267,7 +268,30 @@
                         <h3>Tâches réalisées :</h3>
 
                         <div style="margin-bottom: 25px;">
-                            <h4>Tâche 1 : Faire des plans Wifi </h4>
+                            <h4>Tâche 1 : Configuration des switch de niveau 3 </h4>
+                            <p>Afin de pouvoir répartir internet dans l'ensemble du Haras, l'entreprise ing'iec a fait
+                                des plans pour que l'on puisse déterminer les départs de fibres entres baies. <br> En
+                                effet, il y a la baie principale représentée par 3 rectangles (au niveau des rectangles
+                                rouges) qui permet un départ des fibres vers tous les autres batiments. </p>
+
+                            <div style="margin-bottom: 15px;">
+                                <a href="\assets\plan_fibre.png"><img src="\assets\plan_fibre.png" alt="doc"></a>
+                                <p style="font-style: italic; color: var(--accent); font-size: 0.85rem;">→ Démontre
+                                    l'aptitude à anticiper les contraintes (AC31.02).</p>
+                            </div>
+
+                            <div class="status-container-box ac-box">
+                                <span class="status-label" style="font-size: 0.75rem;">AC21.01 : Maîtriser les
+                                    technologies sans fil</span>
+                                <div class="status-indicator">
+                                    <span class="status-dot dot-acquis"></span>
+                                    <span class="status-text text-acquis">Acquis</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div style="margin-bottom: 25px;">
+                            <h4>Tâche 2 : Faire des plans Wifi </h4>
                             <p>Analyse de la propagation des ondes en environnement contraint.</p>
 
                             <div style="margin-bottom: 15px;">
@@ -288,7 +312,7 @@
                         </div>
 
                         <div style="margin-bottom: 25px;">
-                            <h4>Tâche 2 : Configuration des bornes Wifi</h4>
+                            <h4>Tâche 3 : Configuration des bornes Wifi</h4>
                             <p>Paramétrage des SSIDs et segmentation par VLANs.</p>
                             <div class="status-container-box ac-box">
                                 <span class="status-label" style="font-size: 0.75rem;">AC11.02 : Administrer un réseau
@@ -301,7 +325,7 @@
                         </div>
 
                         <div style="margin-bottom: 25px;">
-                            <h4>Tâche 3 : Installation des bornes Wifi</h4>
+                            <h4>Tâche 4 : Installation des bornes Wifi</h4>
                             <p>A première vu cela semble plutôt simple car nous devions en théorie juste suivre le plan
                                 Wifi fait en amont. <br> Mais en
                                 réalité, c'était plus complexe que ça ! <br> Certaines bornes wifi se sont retrouvées à
