--- a/analyse.html
+++ b/analyse.html
@@ -8,9 +8,22 @@
     <link rel="stylesheet" href="css/styles.css">
     <style>
         /* Ajustement local pour l'analyse */
-        .analysis-section { margin-bottom: 60px; }
-        .competence-detail { margin-top: 20px; padding-left: 20px; border-left: 2px solid var(--border-subtle); }
-        .mission-ref { font-weight: bold; color: var(--accent); font-size: 0.9rem; text-transform: uppercase; }
+        .analysis-section {
+            margin-bottom: 60px;
+        }
+
+        .competence-detail {
+            margin-top: 20px;
+            padding-left: 20px;
+            border-left: 2px solid var(--border-subtle);
+        }
+
+        .mission-ref {
+            font-weight: bold;
+            color: var(--accent);
+            font-size: 0.9rem;
+            text-transform: uppercase;
+        }
     </style>
 </head>
 
@@ -24,91 +37,127 @@
     <main class="container animate-enter">
 
         <header style="margin-bottom: 40px; text-align: center;">
-            <h1>Analyse Réflexive</h1>
+            <h1>Analyse réflexive</h1>
         </header>
 
         <section class="analysis-section">
             <div class="card">
-                <h2>Vision Globale du Projet</h2>
-                <p>Le déploiement WiFi au Haras est le fil rouge de mon alternance. Au **S3**, ma mission s'est concentrée sur l'audit physique, la simulation logicielle et la mise en service du bâtiment principal (le Château). Ce travail de terrain a nécessité une rigueur technique immédiate pour garantir la continuité de service.</p>
-                <p>Pour le **S4**, l'enjeu sera de passer d'une infrastructure isolée à une gestion multisites plus complexe, en intégrant les bâtiments annexes et en renforçant la sécurité globale du domaine.</p>
+                <h2>Vision globale du projet</h2>
+                <p>Le déploiement d'Internet dans le Haras est un très long projet. <br> Au semestre 3, je me suis
+                    concentrée sur le déploiement de bornes wifis dans le châeau. Ce projet a demandé beaucoup de
+                    rigueur pour assurer au client un service de qualité tout en respectant ses exigences d'un point de
+                    vu temporel.</p>
+                <p>Au semestre 4, l'enjeu sera de continuer à développer infrastructure Internet sur les autres
+                    bâtiments présents dans le Haras.</p>
+            </div>
+        </section>
+        <section class="analysis-section">
+            <div class="card">
+                <h2>Retour sur projet :</h2>
+                <p>Le déploiement du wifi dans le château s'est bien déroulé ! <br> Sur les 29 bornes prévu dans le
+                    château seulement une n'a pas été posée car elle est sensée être dans un meuble qui n'est pas encore
+                    arrivé.</p>
             </div>
         </section>
 
         <section class="analysis-section">
-            <h2 style="margin-bottom: 30px; text-align: center;">Validation du Référentiel de Compétences</h2>
+            <h2 style="margin-bottom: 30px; text-align: center;">Validation des compétences</h2>
 
             <div class="card">
                 <div class="status-container-box">
-                    <span class="status-label">RT1 : Administrer les réseaux et l'Internet</span>
+                    <span class="status-label">RT1 – Administrer les réseaux et l’Internet Niveau 2 : Administrer un
+                        réseau</span>
                     <div class="status-indicator">
                         <span class="status-dot dot-acquis"></span>
                         <span class="status-text text-acquis">Acquis</span>
                     </div>
                 </div>
                 <div class="competence-detail">
-                    <p><span class="mission-ref">Mission liée :</span> Mission 1 (Plan WiFi intérieur)</p>
-                    <p><strong>Actions concrètes :</strong> J'ai configuré les équipements actifs Aruba. Cela a impliqué la création et l'étiquetage des VLANs, ainsi que la configuration des interfaces "Trunk" pour assurer le transport des flux jusqu'aux bornes.</p>
-                    <p><strong>Preuves :</strong> Fichier de configuration Switch et Plan d'adressage IP.</p>
-                    <p><em>Analyse :</em> J'ai consolidé ma maîtrise de la segmentation réseau. L'erreur n'est pas permise en production : un VLAN mal tagué et c'est l'isolement d'un service complet du Haras.</p>
+                    <p><span class="mission-ref">Mission liée :</span> Mission 2 : Plan Wifi intérieur : Configuration
+                        et installation</p>
+                    <p><strong>Apprentisage Critique :</strong> </p>
+                    <p><em>Analyse :</em> J'ai consolidé ma maîtrise...
+                    </p>
                 </div>
             </div>
 
             <div class="card">
                 <div class="status-container-box">
-                    <span class="status-label">RT2 : Connecter les entreprises et les usagers</span>
+                    <span class="status-label">RT2 – Connecter les entreprises et les usagers
+                        Niveau 2 : Maîtriser les différentes composantes des solutions de connexion</span>
                     <div class="status-indicator">
                         <span class="status-dot dot-acquis"></span>
                         <span class="status-text text-acquis">Acquis</span>
                     </div>
                 </div>
                 <div class="competence-detail">
-                    <p><span class="mission-ref">Mission liée :</span> Mission 1 (Audit et déploiement)</p>
-                    <p><strong>Actions concrètes :</strong> Réalisation de l'étude de couverture (Audit RF). J'ai dû positionner les bornes pour optimiser le signal dans un bâtiment aux murs épais, limitant la propagation.</p>
-                    <p><strong>Preuves :</strong> Heatmap Ekahau incluse dans le rapport de mission.</p>
-                    <p><em>Analyse :</em> J'ai appris que la théorie du signal diffère de la pratique en bâtiment historique. L'ajustement des puissances d'émission est devenu un automatisme pour éviter les zones d'ombre.</p>
+                    <p><span class="mission-ref">Mission liée :</span> Mission 2 : Plan Wifi intérieur : Configuration
+                        et installation</p>
+                    <p><strong>Apprentisage Critique :</strong> </p>
+                    <p><em>Analyse :</em> J'ai appris que...</p>
                 </div>
             </div>
 
             <div class="card">
                 <div class="status-container-box">
-                    <span class="status-label">RT3 / Pilotage : Travailler en équipe et gérer un projet</span>
+                    <span class="status-label">RT3 – Créer des outils et des applications informatiques pour les R&T
+                        Niveau 2 : Développer une application R&T
+                    </span>
                     <div class="status-indicator">
                         <span class="status-dot dot-acquis"></span>
                         <span class="status-text text-acquis">Acquis</span>
                     </div>
                 </div>
                 <div class="competence-detail">
-                    <p><span class="mission-ref">Mission liée :</span> Mission 2 (Gestion de Projet)</p>
-                    <p><strong>Actions concrètes :</strong> Utilisation d'un diagramme de Gantt pour coordonner l'arrivée du matériel et l'intervention des électriciens pour le câblage.</p>
-                    <p><strong>Preuves :</strong> Capture du planning projet et PV de recette signé.</p>
-                    <p><em>Analyse :</em> La technique ne suffit pas. Sans communication claire avec les prestataires, le déploiement prend du retard. J'ai renforcé ma capacité d'anticipation des risques logistiques.</p>
+                    <p><span class="mission-ref">Mission liée :</span> Mission 1 : Prérequis & Gestion de projet</p>
+                    <p><strong>Apprentisage Critique :</strong> </p>
+                    <p><em>Analyse :</em> J'ai appris...</p>
                 </div>
             </div>
 
             <div class="card">
                 <div class="status-container-box">
-                    <span class="status-label">Cyber : Sécuriser les infrastructures</span>
+                    <span class="status-label">Cyber1 – Administrer un système d’information sécurisé
+                        Niveau 1 : Sensibiliser aux vulnérabilités et aux remédiations</span>
                     <div class="status-indicator">
                         <span class="status-dot dot-encours"></span>
                         <span class="status-text text-encours">En cours</span>
                     </div>
                 </div>
                 <div class="competence-detail">
-                    <p><span class="mission-ref">Mission liée :</span> Mission 1 (Configuration)</p>
-                    <p><strong>Actions concrètes :</strong> Mise en œuvre du chiffrement WPA2/WPA3 Enterprise et isolation du trafic "Guest" du trafic "Administration".</p>
-                    <p><strong>Preuves :</strong> Capture d'écran des politiques de sécurité sur le contrôleur WiFi.</p>
-                    <p><em>Analyse :</em> Si l'isolation est fonctionnelle, je dois encore approfondir la partie surveillance (logs) et détection d'intrusions pour valider totalement cette compétence au S4.</p>
+                    <p><span class="mission-ref">Mission liée :</span> Mission 2 : Plan Wifi intérieur : Configuration
+                        et installation</p>
+                    <p><strong>Apprentisage Critique :</strong> </p>
+                    <p><em>Analyse :</em> j'ai appris...
+                    </p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="status-container-box">
+                    <span class="status-label">Cyber2 – Surveiller un système d’information sécurisé
+                        Niveau 1 : Prendre en main les outils de surveillance et de test</span>
+                    <div class="status-indicator">
+                        <span class="status-dot dot-encours"></span>
+                        <span class="status-text text-encours">En cours</span>
+                    </div>
+                </div>
+                <div class="competence-detail">
+                    <p><span class="mission-ref">Mission liée :</span> aucune</p>
+                    <p><strong>Apprentisage Critique :</strong> aucun</p>
+                    <p><em>Analyse :</em> aucune
+                    </p>
                 </div>
             </div>
         </section>
 
         <footer style="margin-top: 80px; text-align: center; color: var(--text-muted);">
-            <p>Analyse Réflexive BUT R&T - Victoria</p>
+            <p>Portfolio BUT R&T - Victoria RUF</p>
         </footer>
 
     </main>
 
     <script src="js/theme.js"></script>
 </body>
+
 </html>
