--- a/index.html
+++ b/index.html
@@ -14,21 +14,18 @@
 
     <main class="container hero-centered animate-enter">
         <div style="font-size: 1rem; color: var(--accent); letter-spacing: 3px; text-transform: uppercase; margin-bottom: 20px; font-weight: bold;">
-            Victoria
+            Victoria RUF
         </div>
 
         <a href="entreprise.html" class="logo-container" aria-label="Voir l'entreprise">
-            <img src="assets/logo-entreprise-dark.jpg" alt="Logo Entreprise Nuit" class="logo-dark">
-            <img src="assets/logo-entreprise-light.jpg" alt="Logo Entreprise Jour" class="logo-light">
+            <img src="assets/moi.png" alt="Logo Entreprise Nuit" class="logo-dark">
+            <img src="assets/moi.png" alt="Logo Entreprise Jour" class="logo-light">
         </a>
         
         <a href="entreprise.html" class="company-link">
             Portfolio
         </a>
 
-        <p style="margin-top: 30px; font-size: 1.3rem;">
-            Projet d'entreprise du semestre 3<br>
-        </p>
     </main>
 
     <script src="js/theme.js"></script>
