--- a/entreprise.html
+++ b/entreprise.html
@@ -28,17 +28,20 @@
                     professionnels située à Bretteville-sur-Odon. <br>
 
                     Les domaines d'expertise de l'entreprise sont : <br>
-                    <strong> - Téléphonie d'entreprise :</strong> solutions IP, téléphonie mobile WiFi ou DECT, communications
+                    <strong> - Téléphonie d'entreprise :</strong> solutions IP, téléphonie mobile WiFi ou DECT,
+                    communications
                     intégrées (CTI), softphones <br>
                     <strong> - Internet professionnel </strong> et réseaux d'entreprises multi-sites <br>
-                    <strong> - Solutions de communication : </strong> messagerie vocale et unifiée, vidéo sur poste de travail, gestion
+                    <strong> - Solutions de communication : </strong> messagerie vocale et unifiée, vidéo sur poste de
+                    travail, gestion
                     des fax et SMS <br>
                     <strong> - Services cloud </strong> et UCaaS (Unified Communications as a Service) <br>
                     <strong> - Sécurité : </strong> SBC pour l'interopérabilité et la sécurité des communications <br>
                     <strong> - Gestion et optimisation </strong> des coûts de communication <br>
 
                     L'Agence PRO se distingue en s’adaptant et en proposant des solutions aux besoins spécifiques de
-                    chaque secteur d'activité (santé, transport, etc.).</p>
+                    chaque secteur d'activité (santé, transport, etc.).
+                </p>
             </div>
         </section>
 
@@ -48,26 +51,29 @@
                 <div class="card">
                     <h3>Responsabilités</h3>
                     <ul>
-                        <li>• Audit technique sur site</li>
-                        <li>• Configuration équipements (Cisco/Aruba)</li>
-                        <li>• Technicienne </li>
-                        <li>• Service après vente </li>
+                        <li>• Installation de serveurs 3CX (Téléphonie)</li>
+                        <li>• Configuration d'équipements (bornes wifi, routeurs, switch, bornes DECT)</li>
+                        <li>• Gestion de tickets </li>
                     </ul>
                 </div>
                 <div class="card">
                     <h3>Ma valeur ajoutée</h3>
                     <p>Faire le pont entre les besoins abstraits du client ("ça doit marcher") et la réalité technique
-                        ("il faut tel VLAN"). <br> Accompagnement personnalisé des clients pour répondre à leurs problèmes. 
+                        ("il faut tel VLAN"). <br> Accompagnement personnalisé des clients pour répondre à leurs
+                        problèmes. <br> Proposer des moyens d'optimisation des outils de l'entreprise.
                     </p>
                 </div>
             </div>
-                <img src="assets/organigramme.png" alt="Organigramme de l'entreprise">
+            <img src="assets/organigramme.png" alt="Organigramme de l'entreprise">
         </section>
 
         <div style="text-align: center; margin-top: 60px;">
             <a href="projet.html" class="btn btn-primary">Voir les missions &rarr;</a>
         </div>
 
+        <footer style="margin-top: 80px; text-align: center; color: var(--text-muted);">
+            <p>Portfolio BUT R&T - Victoria RUF</p>
+        </footer>
     </main>
 
     <script src="js/theme.js"></script>
